Fix layout issues in debugging mode
git-svn-id: svn+ssh://murphy/home/svn/platal/trunk@823 839d8a87-29fc-0310-9880-83ba4fa771e5

--- a/htdocs/css/default.css
+++ b/htdocs/css/default.css
@@ -447,7 +447,7 @@ div.adresse {
 *******************************************************************************/
 
 #dev {
-    width: 100%;
+    width: auto;
     text-align: center;
     padding: 1px;
 
